--- a/migration-newip-to-ts/src/components/view/sources/sources.css
+++ b/migration-newip-to-ts/src/components/view/sources/sources.css
@@ -1,4 +1,4 @@
-.sources {
+.sources__wrapper {
     display: flex;
     flex-wrap: nowrap;
     width: 100%;
@@ -8,7 +8,9 @@
     font: 300 1em 'Fira Sans', sans-serif;
 }
 
-.source__item {
+.source__item,
+.filter__input,
+.filter__button {
     background: none;
     border: 2px solid #30c5ff;
     font: inherit;
@@ -21,7 +23,9 @@
 }
 
 .source__item:hover,
-.source__item:focus {
+.source__item:focus,
+.filter__input:focus,
+.filter__button:hover {
     border-color: #3fcc59;
     color: #69db7e;
     box-shadow: 0 0.5em 0.5em -0.4em #3fcc59;
@@ -31,4 +35,33 @@
 .source__item-name {
     font-weight: 400;
     white-space: nowrap;
+}
+
+.filter__input {
+    width: 300px;
+}
+
+@media (max-width: 480px) {
+    .filter__input {
+        width: 230px;
+    }
+}
+
+@media (max-width: 1054px) {
+    .filter {
+        display: flex;
+        flex-direction: column;
+    }
+}
+
+@media (max-width: 942px) {
+    .filter {
+        flex-direction: row;
+    }
+}
+
+@media (max-width: 515px) {
+    .filter {
+        flex-direction: column;
+    }
 }
