--- a/migration-newip-to-ts/src/components/view/sources/sources.css
+++ b/migration-newip-to-ts/src/components/view/sources/sources.css
@@ -1,11 +1,12 @@
 .sources__wrapper {
     display: flex;
-    flex-wrap: nowrap;
+    flex-wrap: wrap;
     width: 100%;
-    height: 120px;
+    height: 210px;
     overflow: auto;
     align-items: center;
     font: 300 1em 'Fira Sans', sans-serif;
+    justify-content: center;
 }
 
 .source__item,
@@ -37,6 +38,26 @@
     white-space: nowrap;
 }
 
+@media (max-width: 1054px) {
+    .filter {
+        display: flex;
+        flex-direction: column;
+    }
+}
+
+@media (max-width: 942px) {
+    .filter {
+        padding-bottom: 40px;
+        flex-direction: row;
+    }
+}
+
+@media (max-width: 515px) {
+    .filter {
+        flex-direction: column;
+    }
+}
+
 .filter__input {
     width: 300px;
 }
@@ -47,21 +68,4 @@
     }
 }
 
-@media (max-width: 1054px) {
-    .filter {
-        display: flex;
-        flex-direction: column;
-    }
-}
 
-@media (max-width: 942px) {
-    .filter {
-        flex-direction: row;
-    }
-}
-
-@media (max-width: 515px) {
-    .filter {
-        flex-direction: column;
-    }
-}
