fix: edit button "Clear" styles

--- a/migration-newip-to-ts/src/components/view/sources/sources.css
+++ b/migration-newip-to-ts/src/components/view/sources/sources.css
@@ -23,6 +23,11 @@
   cursor: pointer;
 }
 
+.filter__button {
+  padding-bottom: 1.1em;
+  padding-top: 1.1em;
+}
+
 .source__item:hover,
 .source__item:focus,
 .filter__input:focus,
